[gd_scene load_steps=21 format=2]

[ext_resource path="res://scripts/Meta.gd" type="Script" id=1]
[ext_resource path="res://Escenas/car.tscn" type="PackedScene" id=2]
[ext_resource path="res://Escenas/car2.tscn" type="PackedScene" id=3]
[ext_resource path="res://Race-Track-Tile-Set-PNG/PNG/Road_01/Road_01_Tile_03/Road_01_Tile_03.png" type="Texture" id=4]
[ext_resource path="res://Race-Track-Tile-Set-PNG/PNG/Road_01/Road_01_Tile_01/Road_01_Tile_01.png" type="Texture" id=5]
[ext_resource path="res://Race-Track-Tile-Set-PNG/PNG/Decor/Start.png" type="Texture" id=6]
[ext_resource path="res://Race-Track-Tile-Set-PNG/PNG/Road_01/Road_01_Tile_04/Road_01_Tile_04.png" type="Texture" id=7]
[ext_resource path="res://Race-Track-Tile-Set-PNG/PNG/Road_01/Road_01_Tile_02/Road_01_Tile_02.png" type="Texture" id=8]

[sub_resource type="StyleBoxTexture" id=1]
texture = ExtResource( 7 )
normal_map = ExtResource( 7 )
region_rect = Rect2( 0, 0, 512, 688 )

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 180.5, 27.5 )

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 91.5857, 1691.41 )

[sub_resource type="RectangleShape2D" id=4]
extents = Vector2( 97.1692, 1144.24 )

[sub_resource type="RectangleShape2D" id=5]
extents = Vector2( 139.25, 767 )

[sub_resource type="RectangleShape2D" id=6]
extents = Vector2( 26, 488.25 )

[sub_resource type="RectangleShape2D" id=7]
extents = Vector2( 28, 432.5 )

[sub_resource type="RectangleShape2D" id=8]
extents = Vector2( 25.3448, 2075.81 )

[sub_resource type="RectangleShape2D" id=9]
extents = Vector2( 32.5659, 769.084 )

[sub_resource type="RectangleShape2D" id=10]
extents = Vector2( 33.9392, 577.869 )

[sub_resource type="RectangleShape2D" id=11]
extents = Vector2( 39.4548, 559.623 )

[sub_resource type="RectangleShape2D" id=12]
extents = Vector2( 58.75, 666.474 )

[node name="pistaCarrera" type="Node2D"]

[node name="Pista" type="StaticBody2D" parent="."]
position = Vector2( 20, -76 )

[node name="Panel5" type="Panel" parent="Pista"]
margin_left = 1648.0
margin_top = -1525.0
margin_right = 2087.0
margin_bottom = -1160.0
rect_rotation = 90.2205
custom_styles/panel = SubResource( 1 )

[node name="Panel9" type="Panel" parent="Pista"]
margin_left = 1647.0
margin_top = -1088.0
margin_right = 2086.0
margin_bottom = -723.0
rect_rotation = 90.2205
custom_styles/panel = SubResource( 1 )

[node name="Panel6" type="Panel" parent="Pista"]
margin_left = 1646.0
margin_top = -885.0
margin_right = 2093.0
margin_bottom = -520.0
rect_rotation = 90.2205
custom_styles/panel = SubResource( 1 )

[node name="Panel7" type="Panel" parent="Pista"]
margin_left = 1979.0
margin_top = -869.0
margin_right = 2418.0
margin_bottom = -484.0
rect_rotation = 90.2205
custom_styles/panel = SubResource( 1 )

[node name="Panel8" type="Panel" parent="Pista"]
margin_left = 1981.0
margin_top = -1311.0
margin_right = 2428.0
margin_bottom = -926.0
rect_rotation = 90.2205
custom_styles/panel = SubResource( 1 )

[node name="Road01Tile04" type="Sprite" parent="Pista"]
position = Vector2( 1102, -1676 )
scale = Vector2( 0.819338, 0.513808 )
texture = ExtResource( 4 )

[node name="Road01Tile05" type="Sprite" parent="Pista"]
position = Vector2( 1785.35, -230.327 )
rotation = 3.14159
scale = Vector2( 0.559591, -0.707073 )
texture = ExtResource( 5 )

[node name="Road01Tile22" type="Sprite" parent="Pista"]
position = Vector2( 4544.68, 2040.05 )
rotation = 0.487923
scale = Vector2( 1.09916, 0.701321 )
texture = ExtResource( 4 )

[node name="Road01Tile23" type="Sprite" parent="Pista"]
position = Vector2( 4053, 1779 )
rotation = 0.487923
scale = Vector2( 1.09916, 0.701321 )
texture = ExtResource( 4 )

[node name="Road01Tile24" type="Sprite" parent="Pista"]
position = Vector2( 4053, 1779 )
rotation = 0.487923
scale = Vector2( 1.09916, 0.701321 )
texture = ExtResource( 4 )

[node name="Road01Tile21" type="Sprite" parent="Pista"]
position = Vector2( 5182.45, 1857.71 )
rotation = 2.05228
scale = Vector2( 1.00977, 0.700964 )
texture = ExtResource( 4 )

[node name="Road01Tile09" type="Sprite" parent="Pista"]
position = Vector2( 4966.69, 2263.8 )
rotation = -2.64536
scale = Vector2( 0.700747, -0.701296 )
texture = ExtResource( 5 )

[node name="Road01Tile07" type="Sprite" parent="Pista"]
position = Vector2( 2258, -1331 )
rotation = 0.487923
scale = Vector2( 1.00977, 0.513808 )
texture = ExtResource( 4 )

[node name="Road01Tile12" type="Sprite" parent="Pista"]
position = Vector2( 2714, -1089 )
rotation = 0.487923
scale = Vector2( 1.00977, 0.513808 )
texture = ExtResource( 4 )

[node name="Road01Tile13" type="Sprite" parent="Pista"]
position = Vector2( 3169.97, -846.955 )
rotation = 0.487923
scale = Vector2( 1.01847, 0.513808 )
texture = ExtResource( 4 )

[node name="Road01Tile14" type="Sprite" parent="Pista"]
position = Vector2( 3628, -604 )
rotation = 0.487923
scale = Vector2( 1.00977, 0.513808 )
texture = ExtResource( 4 )

[node name="Road01Tile15" type="Sprite" parent="Pista"]
position = Vector2( 4082, -363 )
rotation = 0.487923
scale = Vector2( 1.00977, 0.513808 )
texture = ExtResource( 4 )

[node name="Road01Tile16" type="Sprite" parent="Pista"]
position = Vector2( 4538, -121 )
rotation = 0.487923
scale = Vector2( 1.00977, 0.513808 )
texture = ExtResource( 4 )

[node name="Road01Tile19" type="Sprite" parent="Pista"]
position = Vector2( 5660.72, 943.283 )
rotation = 2.05228
scale = Vector2( 1.02779, 0.703363 )
texture = ExtResource( 4 )

[node name="Road01Tile20" type="Sprite" parent="Pista"]
position = Vector2( 5420.27, 1403.14 )
rotation = 2.05228
scale = Vector2( 1.00977, 0.700636 )
texture = ExtResource( 4 )

[node name="Road01Tile17" type="Sprite" parent="Pista"]
position = Vector2( 4990, 119 )
rotation = 0.487923
scale = Vector2( 1.00977, 0.513808 )
texture = ExtResource( 4 )

[node name="Road01Tile18" type="Sprite" parent="Pista"]
position = Vector2( 5440, 358 )
rotation = 0.487923
scale = Vector2( 1.00977, 0.513808 )
texture = ExtResource( 4 )

[node name="Road01Tile06" type="Sprite" parent="Pista"]
position = Vector2( 1790, -1468.5 )
scale = Vector2( 0.561507, 0.531115 )
texture = ExtResource( 8 )

[node name="Road01Tile11" type="Sprite" parent="Pista"]
position = Vector2( 1883.52, -1526.36 )
rotation = 0.477096
scale = Vector2( 0.554931, 0.514454 )
texture = ExtResource( 8 )

[node name="Road01Tile03" type="Sprite" parent="Pista"]
position = Vector2( 1466, -1675 )
rotation = 1.57546
scale = Vector2( 0.514688, 0.529533 )
texture = ExtResource( 8 )

[node name="Road01Tile01" type="Sprite" parent="Pista"]
position = Vector2( 1462, -231.125 )
scale = Vector2( 0.529667, 0.708755 )
texture = ExtResource( 5 )

[node name="Road01Tile08" type="Sprite" parent="Pista"]
position = Vector2( 5851.1, 573.773 )
rotation = 2.04724
scale = Vector2( 0.514952, -0.701959 )
texture = ExtResource( 5 )

[node name="Road01Tile25" type="Sprite" parent="Pista"]
position = Vector2( 3510.78, 2047.45 )
rotation = 3.13834
scale = Vector2( 0.761133, 0.700077 )
texture = ExtResource( 8 )

[node name="Road01Tile10" type="Sprite" parent="Pista"]
position = Vector2( 3628.41, 1555.63 )
rotation = 0.482829
scale = Vector2( 0.766286, 0.701383 )
texture = ExtResource( 8 )

[node name="Road01Tile27" type="Sprite" parent="Pista"]
position = Vector2( 3514.57, 1645.99 )
rotation = 0.0190155
scale = Vector2( 0.759378, 0.677285 )
texture = ExtResource( 8 )

[node name="Road01Tile26" type="Sprite" parent="Pista"]
position = Vector2( 3555.55, 1599.23 )
rotation = 0.186549
scale = Vector2( 0.758065, 0.709148 )
texture = ExtResource( 8 )

[node name="Road01Tile34" type="Sprite" parent="Pista"]
position = Vector2( 630, 2018.36 )
rotation = -1.559
scale = Vector2( 0.702191, 0.718816 )
texture = ExtResource( 8 )

[node name="Road01Tile28" type="Sprite" parent="Pista"]
position = Vector2( 3004, 2045 )
rotation = 0.0115095
scale = Vector2( 1.09916, 0.701321 )
texture = ExtResource( 4 )

[node name="Road01Tile29" type="Sprite" parent="Pista"]
position = Vector2( 2452, 2038 )
rotation = 0.0115095
scale = Vector2( 1.09916, 0.701321 )
texture = ExtResource( 4 )

[node name="Road01Tile30" type="Sprite" parent="Pista"]
position = Vector2( 1896, 2032 )
rotation = 0.0115095
scale = Vector2( 1.09916, 0.701321 )
texture = ExtResource( 4 )

[node name="Road01Tile31" type="Sprite" parent="Pista"]
position = Vector2( 1337, 2026 )
rotation = 0.0115095
scale = Vector2( 1.09916, 0.701321 )
texture = ExtResource( 4 )

[node name="Road01Tile35" type="Sprite" parent="Pista"]
position = Vector2( 1104.27, 2023.87 )
rotation = 0.0115095
scale = Vector2( 1.03049, 0.699058 )
texture = ExtResource( 4 )

[node name="Road01Tile32" type="Sprite" parent="Pista"]
position = Vector2( 638, 1540 )
rotation = 1.58647
scale = Vector2( 1.09916, 0.721138 )
texture = ExtResource( 4 )

[node name="Road01Tile33" type="Sprite" parent="Pista"]
position = Vector2( 646, 981 )
rotation = 1.58647
scale = Vector2( 1.09916, 0.721138 )
texture = ExtResource( 4 )

[node name="Road01Tile36" type="Sprite" parent="Pista"]
position = Vector2( 653, 427 )
rotation = 1.58413
scale = Vector2( 1.09916, 0.721138 )
texture = ExtResource( 4 )

[node name="Road01Tile37" type="Sprite" parent="Pista"]
position = Vector2( 661.028, -128 )
rotation = 1.58413
scale = Vector2( 1.09916, 0.72122 )
texture = ExtResource( 4 )

[node name="Road01Tile38" type="Sprite" parent="Pista"]
position = Vector2( 668.567, -684.006 )
rotation = 1.58413
scale = Vector2( 1.09916, 0.71996 )
texture = ExtResource( 4 )

[node name="Road01Tile39" type="Sprite" parent="Pista"]
position = Vector2( 675.313, -1246.02 )
rotation = 1.58413
scale = Vector2( 1.09916, 0.71996 )
texture = ExtResource( 4 )

[node name="Road01Tile02" type="Sprite" parent="Pista"]
position = Vector2( 679, -1674 )
scale = Vector2( 0.718388, 0.515376 )
texture = ExtResource( 8 )

[node name="Start" type="Sprite" parent="Pista"]
position = Vector2( 655.5, 218 )
scale = Vector2( 0.252448, 0.323646 )
texture = ExtResource( 6 )

[node name="Meta" type="Area2D" parent="Pista"]
position = Vector2( 453, 214 )
script = ExtResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Pista/Meta"]
position = Vector2( 208, 44 )
shape = SubResource( 2 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Pista"]
visible = false
position = Vector2( 933.152, 147.889 )
rotation = 0.0131196
shape = SubResource( 3 )

[node name="CollisionShape2D2" type="CollisionShape2D" parent="Pista"]
visible = false
position = Vector2( 382, 163 )
rotation = 0.0131196
shape = SubResource( 3 )

[node name="CollisionShape2D3" type="CollisionShape2D" parent="Pista"]
visible = false
position = Vector2( 2139, 1763 )
rotation = -1.56209
shape = SubResource( 4 )

[node name="CollisionShape2D4" type="CollisionShape2D" parent="Pista"]
visible = false
position = Vector2( 1184.25, -775 )
shape = SubResource( 5 )

[node name="CollisionShape2D6" type="CollisionPolygon2D" parent="Pista"]
visible = false
position = Vector2( 1058, -1753 )
rotation = 3.12936
scale = Vector2( 63.7042, -35.3851 )
polygon = PoolVector2Array( 8.94306, 6.16207, 8.9218, 5.34292, 8.74241, 4.35768, 8.48416, 3.31765, 8.08484, 2.309, 7.65547, 1.49884, 7.05267, 0.579456, 6.4359, -0.0852585, 5.77262, -0.664162, 5.03181, -1.10004, 4.1819, -1.42047, 3.37966, -1.65716, 2.60996, -1.72499, 1.73116, -1.67737, 0.93045, -1.68799, -3.99802, -1.55116, -4.71909, -1.39396, -5.15744, -1.21472, -5.82969, -0.804237, -6.26631, -0.370678, -6.81146, 0.263107, -7.19964, 0.893436, -7.57136, 1.63646, -7.91073, 2.52007, -8.18577, 3.62837, -8.38329, 4.59365, -8.50061, 5.81153, -8.51112, 6.57485, -8.45763, 9.82387, -9.24226, 9.86942, -9.21649, 6.7317, -9.19355, 5.48764, -9.07586, 4.32628, -8.80235, 2.99192, -8.54185, 2.05351, -8.14143, 0.914185, -7.77028, 0.0863953, -6.68172, -1.4355, -5.35367, -2.36917, -3.95919, -2.7673, -2.35816, -2.80257, 0.969471, -2.87588, 2.63367, -2.85602, 3.55995, -2.84816, 4.48796, -2.58598, 5.41654, -2.23903, 6.1897, -1.66254, 6.86848, -1.11224, 7.69046, -0.282475, 8.26148, 0.581089, 8.86486, 1.58525, 9.26553, 2.79171, 9.58867, 4.1412, 9.80559, 6.03002 )

[node name="CollisionShape2D5" type="CollisionShape2D" parent="Pista"]
visible = false
position = Vector2( 1622, -924 )
shape = SubResource( 6 )

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="Pista"]
visible = false
position = Vector2( 1628, -254 )
scale = Vector2( 43.7345, 39.9746 )
polygon = PoolVector2Array( -6.95103, -4.67797, -6.83671, -3.40216, -6.69952, -2.15137, -6.40227, -0.925588, -5.96783, 0.175111, -5.41906, 1.20076, -4.8703, 2.22642, -4.11575, 3.05194, -3.52125, 3.70235, -2.62951, 4.32775, -1.87495, 4.70299, -1.00607, 5.00318, -0.0914612, 5.00318, 0.754551, 4.95315, 1.64629, 4.70299, 2.51517, 4.27772, 3.36119, 3.65232, 4.16147, 2.87683, 4.91602, 1.97626, 5.51052, 0.925589, 6.05928, -0.225143, 6.56232, -1.75111, 6.79097, -2.95188, 6.88243, -4.05258, 6.8367, -4.75302, 7.97997, -4.75302, 7.77418, -1.90121, 6.9739, 0.97562, 5.67058, 3.22705, 4.02428, 5.05321, 2.01214, 6.30401, -0.0914612, 6.62921, -2.2408, 6.30401, -4.09288, 5.15328, -5.73918, 3.25207, -6.9739, 0.97562 )

[node name="CollisionShape2D7" type="CollisionShape2D" parent="Pista"]
visible = false
position = Vector2( 1956, -877.5 )
shape = SubResource( 7 )

[node name="CollisionShape2D8" type="CollisionShape2D" parent="Pista"]
visible = false
position = Vector2( 3764.85, -356.716 )
rotation = -1.08288
shape = SubResource( 8 )

[node name="CollisionShape2D9" type="CollisionShape2D" parent="Pista"]
visible = false
position = Vector2( 3935.28, -612.463 )
rotation = -1.08288
shape = SubResource( 8 )

[node name="CollisionPolygon2D2" type="CollisionPolygon2D" parent="Pista"]
visible = false
position = Vector2( 1851, -1599 )
scale = Vector2( 27.3981, -25.0946 )
polygon = PoolVector2Array( -7.33627, -10.2412, -6.97128, -8.36834, -5.87631, -5.81799, -4.56236, -3.54658, -3.1024, -2.2714, -2.18993, -1.51427, 0.328491, -0.358643, 3.0659, 0.0398521, 5.91282, -0.278942, 8.72323, -1.35487, 9.59921, 0.358643, 6.3873, 1.75336, 2.88342, 2.15186, -0.182495, 1.67367, -3.39439, 0.0797005, -5.69382, -1.95261, -7.40926, -4.62251 )

[node name="CollisionShape2D10" type="CollisionShape2D" parent="Pista"]
visible = false
position = Vector2( 5240.41, 1288.4 )
rotation = 0.483578
shape = SubResource( 9 )

[node name="CollisionShape2D11" type="CollisionShape2D" parent="Pista"]
visible = false
position = Vector2( 5614, 1488 )
rotation = 0.483578
shape = SubResource( 9 )

[node name="CollisionShape2D12" type="CollisionShape2D" parent="Pista"]
visible = false
position = Vector2( 4388, 1719 )
rotation = -1.08537
shape = SubResource( 10 )

[node name="CollisionShape2D13" type="CollisionShape2D" parent="Pista"]
visible = false
position = Vector2( 4243, 2117 )
rotation = -1.08537
shape = SubResource( 10 )

[node name="CollisionPolygon2D3" type="CollisionPolygon2D" parent="Pista"]
visible = false
position = Vector2( 5938, 576 )
scale = Vector2( 18.4307, 25.9301 )
polygon = PoolVector2Array( -9.71207, -7.52021, -8.19287, -6.74891, -6.94495, -6.0933, -4.77466, -4.66639, -3.25543, -3.4323, -1.73624, -2.00539, -0.434052, -0.347088, 0.596832, 1.38835, 1.08514, 2.89239, 1.24792, 4.89778, 0.922363, 6.94173, 0.271271, 8.33008, 3.03842, 9.37134, 4.55762, 6.28612, 4.50336, 2.77669, 2.49585, -1.07983, -0.488312, -4.3193, -5.26297, -7.7516, -8.46417, -9.13995 )

[node name="CollisionPolygon2D4" type="CollisionPolygon2D" parent="Pista"]
visible = false
position = Vector2( 5056, 2349 )
rotation = 3.14159
scale = Vector2( 33.7782, -21.4536 )
polygon = PoolVector2Array( -5.03284, -9.18259, -4.1447, -6.71214, -2.78287, -4.28831, -0.888153, -1.91109, 1.83549, 0, 4.82559, 0.885635, 7.84529, 0.372902, 8.40779, 0.0466156, 9.26633, 2.88995, 8.20056, 3.21624, 4.82559, 3.8222, 1.42104, 2.88995, -1.80591, 0.559349, -4.38153, -2.61028, -6.54269, -7.08504, -6.83875, -7.87745 )

[node name="CollisionPolygon2D5" type="CollisionPolygon2D" parent="Pista"]
visible = false
position = Vector2( 3578, 1607 )
scale = Vector2( 32.8196, -26.7047 )
polygon = PoolVector2Array( -8.83618, -9.88589, -8.10491, -9.62377, -7.83068, -8.79995, -7.7088, -6.81528, -7.12988, -4.04423, -5.97204, -1.27318, -3.90011, 1.53532, -2.10241, 3.22041, 0.335159, 4.71828, 3.80869, 5.50466, 7.0994, 5.31742, 8.62287, 4.68083, 9.50649, 6.81529, 7.46503, 7.67656, 3.71728, 8.2757, -0.152359, 7.48933, -3.50401, 5.95401, -6.45956, 3.25786, -8.44007, -0.374462, -8.83618, -2.097 )

[node name="CollisionPolygon2D6" type="CollisionPolygon2D" parent="Pista"]
visible = false
position = Vector2( 3618, 2098 )
scale = Vector2( 32.3854, 28.0554 )
polygon = PoolVector2Array( -9.91189, 4.52676, -8.09007, 4.3129, -6.14475, 3.70695, -3.92152, 2.63764, -2.2541, 1.4614, -1.08073, 0.21386, 0.216148, -1.42575, 1.17337, -3.13665, 2.19234, -5.88123, 2.62464, -8.0555, 2.59377, -8.94659, 2.90254, -9.62382, 3.42747, -10.0515, 3.42747, -10.0515, 3.89064, -9.94461, 3.05693, -7.91292, 4.56996, -6.95054, 3.64362, -3.02972, 2.37762, -0.534653, 0.524925, 1.99605, -2.71728, 4.63369, -6.45354, 6.20202, -9.881, 6.80796 )

[node name="CollisionShape2D14" type="CollisionShape2D" parent="Pista"]
visible = false
position = Vector2( 2737.73, 2256.24 )
rotation = 1.5788
shape = SubResource( 11 )

[node name="CollisionShape2D15" type="CollisionShape2D" parent="Pista"]
visible = false
position = Vector2( 1509.82, 2264.57 )
rotation = -1.56094
shape = SubResource( 12 )

[node name="CollisionPolygon2D7" type="CollisionPolygon2D" parent="Pista"]
visible = false
position = Vector2( 594, 2091 )
scale = Vector2( 25.9971, 24.995 )
polygon = PoolVector2Array( -5.42367, -9.4419, -8.00088, -9.4419, -7.50082, -6.76136, -5.80833, -2.44049, -3.0388, 1.40028, 0.538521, 4.16084, 4.92362, 6.00121, 9.53951, 6.84138, 9.46258, 4.16084, 7.84702, 4.12083, 5.69293, 3.68075, 3.69271, 2.92059, 2.07715, 2.0004, 0.230795, 0.760155, -1.03858, -0.480095, -2.53874, -2.24045, -3.46192, -3.72075, -4.46203, -5.84118, -5.00055, -7.4415 )

[node name="CocheJugador" parent="." instance=ExtResource( 2 )]
position = Vector2( 557, 463 )
scale = Vector2( 0.75, 0.75 )

[node name="Cochejugador2" parent="." instance=ExtResource( 3 )]
position = Vector2( 733, 464 )
scale = Vector2( 0.75, 0.75 )

[connection signal="body_entered" from="Pista/Meta" to="Pista/Meta" method="_on_Meta_body_entered"]
[connection signal="body_exited" from="Pista/Meta" to="Pista/Meta" method="_on_Meta_body_exited"]
